[package]
name = "mouse_forms_js"
version = "0.1.0"
authors = ["Andrew Breidenbach <breidenbach.aj@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "mouse_forms_js"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "^0.5.0"

[dependencies]
neon = "^0.5.0"
serde_json = "1.0.62"
mouse_forms = {git = "https://github.com/AjBreidenbach/mouse_forms", branch="rewrite"}
